--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,7 @@
     justify-content: center;
     font-size:20px;
     color:white;
+    &.high-value {
+        background-color: #FFAAAA;
+    }
 }
